--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "discord-chat-replica",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Bowser65",
-  "license": "OSL-3.0",
-  "scripts": {
-    "build-scss": "node-sass style/style.scss --output-style compressed dist/style.css",
-    "build-js": "esbuild src/index.js --outfile=dist/script.js --minify --bundle",
-    "build": "pnpm run build-js && pnpm run build-scss"
-  },
-  "dependencies": {
-    "ejs": "^3.1.3",
-    "highlight.js": "^10.0.3",
-    "html-minifier": "^4.0.0",
-    "mime-types": "^2.1.27",
-    "punycode": "^2.1.1",
-    "simple-markdown": "^0.7.2",
-    "twemoji": "^13.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^7.1.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "node-sass": "^4.14.1"
-  }
+	"name": "discordtickets-portal",
+	"version": "1.0.0",
+	"private": true,
+	"main": "bin/www",
+	"authors": [
+		"Bowser65",
+		"eartharoid"
+	],
+	"license": "OSL-3.0",
+	"scripts": {
+		"start": "node ./bin/www",
+		"build": "esbuild src/src/index.js --outfile=src/public/dist/js/index.js --minify --bundle",
+		"sass": "sass src/src/scss/:src/public/dist/css --watch --style=compressed --no-source-map"
+	},
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"ejs": "^3.1.5",
+		"express": "^4.17.1",
+		"highlight.js": "^10.0.3",
+		"html-minifier": "^4.0.0",
+		"leekslazylogger": "^2.0.0",
+		"leekslazylogger-express": "0.0.2",
+		"mime-types": "^2.1.27",
+		"punycode": "^2.1.1",
+		"simple-markdown": "^0.7.2",
+		"twemoji": "^13.0.0"
+	},
+	"devDependencies": {
+		"esbuild": "^0.6.27",
+		"eslint": "^7.1.0",
+		"nodemon": "^2.0.4",
+		"sass": "^1.26.10"
+	}
 }
