--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	"license": "OSL-3.0",
 	"scripts": {
 		"start": "node ./bin/www",
-		"build": "esbuild src/src/index.js --outfile=src/public/dist/js/index.js --minify --bundle",
-		"sass": "sass src/src/scss/:src/public/dist/css --watch --style=compressed --no-source-map"
+		"build": "esbuild src/public/src/index.js --outfile=src/public/dist/js/index.js --minify --bundle",
+		"sass": "sass src/public/src/scss/:src/public/dist/css --watch --style=compressed --no-source-map"
 	},
 	"dependencies": {
 		"dotenv": "^8.2.0",
