--- a/user/.env
+++ b/user/.env
@@ -1,4 +1,16 @@
-HOST="http://localhost:8080/"
+# External (proxied) host
+	# eg. https://tickets.example.com
+HOST=http://localhost:8080/
+
+# Server port
 PORT=8080
+
+# Secret authentication key
+	# a long and RANDOM string
 KEY=test
-NAME="DiscordTickets"
+
+# Website / server name
+NAME=DiscordTickets
+
+# Days to keep archives for (set to false to disable)
+KEEP_FOR=365
