--- a/user/.env
+++ b/user/.env
@@ -7,7 +7,7 @@ PORT=8080
 
 # Secret authentication key
 	# a long and RANDOM string
-KEY=test
+KEY=<>?W£6tn34gew8%bgAEIghi4wf$^£><
 
 # Website / server name
 NAME=DiscordTickets
