--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"express": "^4.17.1",
 		"highlight.js": "^10.0.3",
 		"html-minifier": "^4.0.0",
-		"leekslazylogger-express": "0.0.7",
+		"leekslazylogger-express": "^0.0.8",
 		"mime-types": "^2.1.27",
 		"punycode": "^2.1.1",
 		"simple-markdown": "^0.7.2",
